grammar.js
		program: $ => repeat(choice($.exec_directive, $.statement)),

		class_declaration: $ => seq(
			caseInsensitive('class'),
			field('name', $.identifier),
			optional($._declaration_heritage),
      optional($._imports_modifier),
			field('modifiers', repeat($.class_modifier)),
			';',
		),

		exec_directive: $ => seq(
			field('directive', token(/#[^\s]+/)),
			field('kind', $.identifier),
			field('operation', $.identifier),
			field('arguments', /[^\n]+/),
			'\n'
		),

		state_declaration: $ => seq(
			field('modifiers', repeat($.state_modifier)),
			caseInsensitive('state'), optional(seq('(', ')')),
			field('name', $.identifier),
			optional($._declaration_heritage),
			field('body', $.state_body),
		),
		state_body: $ => prec.right(seq(
			'{',
			field('ignores', optional($._state_ignores)),
			repeat($._statement),
			'}'
		)),
		_state_ignores: $ => seq(
			caseInsensitive('ignores'),
			commaSep1($.identifier),
			';'
		),

		function_declaration: $ => seq(
			field('modifiers', repeat($.function_modifier)),
			choice(caseInsensitive('function'), caseInsensitive('event')),
			optional(field('return_type', $.type)),
			field('name', $.identifier),
			field('parameters', $.function_parameters),
			choice(field('body', $.block), ';'),
		),

		operator_declaration: $ => seq(
			field('modifiers', repeat($.function_modifier)),
			choice(
				seq(caseInsensitive('operator'), '(', optional(field('precedence', $.uint)),')',),
				caseInsensitive('preoperator'),
				caseInsensitive('postoperator'),
			),
			field('return_type', optional($.type)),
			field('operator', $.operator_name),
			field('parameters', $.function_parameters),
			choice(field('body', $.block), ';'),
		),
		operator_name: $ => choice(
			$.identifier,
			/[\^!$%&/?*+~@\-><|=]+/,
		),

		if_statement: $ => prec.right(seq(
			caseInsensitive('if'),
			field('condition', $.condition),
			field('consequence', $.statement),
			optional(seq(caseInsensitive('else'), field('alternative', $.statement))),
		)),

		condition: $ => seq('(', $.expression, ')'),

		replication_block: $ => seq(
			caseInsensitive('replication'),
			'{',
			repeat(seq(
				field('kind', choice(caseInsensitive('unreliable'), caseInsensitive('reliable'))),
				caseInsensitive('if'),
				field('condition', $.condition),
				field('consequence', commaSep1($.identifier)),
				';',
			)),
			'}',
		),

		defaultproperties: $ => seq(
			caseInsensitive('defaultproperties'),
			'{',
			repeat($._defaultproperties_properties),
			'}',
		),
		_defaultproperties_properties: $ => seq(
			$.default_property_assignment,
			'\n',
		),
		default_property_assignment: $ => prec.right('assign', seq(
			field('property', seq(
				$.identifier,
				field('index', optional(seq(choice('(', '['), $.uint, choice(']', ')')))),
			)),
			'=',
			field('value', $._default_property_value),
		)),
		_default_property_value: $ => choice(
			$.primary_expression,
			$.struct_value,
		),
		struct_value: $ => seq(
			'(',
				commaSep(seq(field('left', $.identifier),  '=', field('right', $.primary_expression))),
			')'
		),

		for_statement: $ => seq(
			caseInsensitive('for'), '(',
			field('init', $.assignment_expression), ';',
			field('condition', $.expression), ';',
			field('update', $.expression), ')',
			field('body', $.statement),
		),

		foreach_statement: $ => seq(
			caseInsensitive('foreach'),
			field('iterator', $.identifier),
			field('arguments', $.arguments),
			field('body', $.statement),
		),

		while_statement: $ => seq(
			caseInsensitive('while'), '(',
			field('condition', $.expression), ')',
			field('body', $.statement),
		),

		do_until_statement: $ => seq(
			caseInsensitive('do'),
			field('body', $.statement),
			caseInsensitive('until'), '(', field('condition', $.expression), ')',
			';',
		),

		switch_statement: $ => seq(
			caseInsensitive('switch'),
			'(', field('condition', $.expression), ')',
			field('rules', $.switch_body),
		),
		switch_body: $ => seq(
			'{',
				repeat($.switch_rule),
			'}',
		),
		switch_rule: $ => prec.left(seq(
			$.switch_condition,
			repeat($.statement),
		)),
		switch_condition: $ => seq(
			choice(
				seq(caseInsensitive('case'), $.expression),
				caseInsensitive('default'),
			),
			':',
		),

		return_statement: $ => seq(
			caseInsensitive('return'),
			optional($.expression),
			';'
		),

		continue_statement: _ => seq(
			caseInsensitive('continue'),
			';'
		),

		break_statement: _ => seq(
			caseInsensitive('break'),
			';'
		),

		assert_statement: $ => seq(
			caseInsensitive('assert'), '(', field('condition', $.expression), ')',
			';'
		),

		enum_declaration: $ => seq(
			$._enum_declaration,
			';'
		),
		_enum_declaration: $ => seq(
			caseInsensitive('enum'),
			field('name', $.identifier),
			field('body', $.enum_body),
		),
		enum_body: $ => seq(
			'{',
			commaSep1($.identifier),
			optional(','),
			'}',
		),

		struct_declaration: $ => seq(
			caseInsensitive('struct'),
			field('name', $.identifier),
			optional(seq(
				caseInsensitive('extends'),
				field('parent', $.identifier),
			)),
			field('body', $.struct_body),
			';',
		),
		struct_body: $ => seq(
			'{',
			repeat($.variable_declaration),
			'}',
		),

		constant_declaration: $ => seq(
			caseInsensitive('const'),
			$.assignment_expression,
			';',
		),

		variable_declaration: $ => seq(
			choice(
				$._class_variable_declaration,
				$._enum_variable_declaration,
			),
			';',
		),

		_class_variable_declaration: $ => prec.left(seq(
			caseInsensitive('var'),
			field('editgroups', optional(seq('(', commaSep($._identifier), ')'))),
			field('modifiers', repeat($.variable_modifier)),
			field('type', $.type),
			commaSep1(field('name', choice($._identifier, $.array_identifier))),
		)),

		_enum_variable_declaration: $ => seq(
			caseInsensitive('var'),
			field('editorgroups', optional(seq('(', commaSep($._identifier), ')'))),
			field('modifiers', repeat($.variable_modifier)),
			$._enum_declaration,
			commaSep1(field('name', choice($._identifier, $.array_identifier))),
		),

		local_variable_declaration: $ => seq(
			caseInsensitive('local'),
			field('type', $.type),
			commaSep1(field('name', choice($._identifier, $.array_identifier))),
			';',
		),

		_config_modifier: $ => seq(
			caseInsensitive('config'),
			optional(seq(
				'(',
				optional($.identifier),
				')'
			)),
		),
    _imports_modifier: $ => seq(
      caseInsensitive('imports'),
      seq(
        '(',
        field('import', optional($.identifier)),
        ')'
      ),
    ),
    _native_modifier: $ => seq(
			caseInsensitive('native'),
			optional(seq(
				'(',
				field('token', optional($.uint)),
				')'
			)),
		),

		_class_depends_modifier: $ => seq(
			caseInsensitive('dependson'),
			optional(seq(
				'(',
				$.identifier,
				')'
			)),
		),

		_class_within_modifier: $ => seq(
			caseInsensitive('within'),
			$.identifier,
		),

		_class_display_categories_modifier: $ => seq(
			choice(caseInsensitive('hidecategories'), caseInsensitive('showcategories')),
			optional(seq(
				'(',
				commaSep($.identifier),
				')'
			)),
		),

		class_modifier: $ => choice(
			caseInsensitive('abstract'),
			caseInsensitive('notplaceable'),
			caseInsensitive('native'),
			choice(caseInsensitive('nativereplication'), caseInsensitive('nonativereplication')),
			caseInsensitive('safereplace'),
			caseInsensitive('perobjectconfig'),
			caseInsensitive('transient'),
			caseInsensitive('noexport'),
			caseInsensitive('exportstructs'),
			caseInsensitive('cacheexempt'),
			caseInsensitive('hidedropdown'),
			caseInsensitive('parseconfig'),
			caseInsensitive('instanced'),
			choice(caseInsensitive('collapsecategories'), caseInsensitive('dontcollapsecategories')),
			choice(caseInsensitive('placeable'), caseInsensitive('notplaceable')),
			choice(caseInsensitive('editinlinenew'), caseInsensitive('noteditinlinenew')),
      $._config_modifier,
			$._class_depends_modifier,
			$._class_within_modifier,
			$._class_display_categories_modifier
		),

		variable_modifier: $ => choice(
			caseInsensitive('static'),
			caseInsensitive('private'),
			caseInsensitive('public'),
			caseInsensitive('protected'),
			caseInsensitive('const'),
			caseInsensitive('editconst'),
			caseInsensitive('transient'),
			caseInsensitive('deprecated'),
			caseInsensitive('input'),
			caseInsensitive('localized'),
			caseInsensitive('travel'),
			caseInsensitive('native'),
			caseInsensitive('export'),
			caseInsensitive('noexport'),
			caseInsensitive('globalconfig'),
			$._config_modifier,
		),

		state_modifier: _ => choice(
			caseInsensitive('auto'),
			caseInsensitive('simulated'),
		),

		function_modifier: $ => choice(
			caseInsensitive('static'),
			caseInsensitive('private'),
			caseInsensitive('protected'),
			caseInsensitive('simulated'),
			caseInsensitive('singular'),
			caseInsensitive('final'),
			caseInsensitive('latent'),
			caseInsensitive('iterator'),
			caseInsensitive('exec'),
			$._native_modifier,
		),

		parameter_modifier: _ => choice(
			caseInsensitive('out'),
			caseInsensitive('optional'),
			caseInsensitive('coerce'),
			caseInsensitive('skip'),
		),

		function_parameters: $ => seq(
			'(',
			commaSep(
				seq(
					optional($.parameter_modifier),
					field('type', $.type),
					field('name', $.identifier),
				)
			),
			')'
		),

		_declaration_heritage: $ => seq(
			choice(caseInsensitive('extends'), caseInsensitive('expands')),
			field('parent', $.identifier)
		),

		block: $ => prec.right(seq(
			'{',
			repeat($._statement),
			'}'
		)),

		label: $ => seq(
			$.identifier, ':',
		),
		_statement: $ => choice(
			$.local_variable_declaration,
			$.statement,
		),

		expression_statement: $ => seq(
			$._expression,
			';',
		),

		arguments: $ => seq(
			'(',
			commaSep(optional($.expression)),
			')',
		),

		_expression: $ => choice(
			$.expression,
		),
		_lhs_expression: $ => choice(
			$.member_expression,
			$.subscript_expression,
			$._identifier,
		),
		assignment_expression: $ => prec.right('assign', seq(
			field('left', choice($.parenthesized_expression, $._lhs_expression)),
			'=',
			field('right', $.expression),
		)),
		_augmented_assignment_lhs: $ => choice(
			$.member_expression,
			$.subscript_expression,
			$.identifier,
			$.parenthesized_expression,
		),
		augmented_assignment_expression: $ => prec.right('assign', seq(
			field('left', $._augmented_assignment_lhs),
			field('operator', choice('+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=', '>>=', '>>>=',
				'<<=', '**=', '&&=', '||=', '??=')),
			field('right', $.expression),
		)),
		new_expression: $ => prec.right('new', seq(
			caseInsensitive('new'),
			optional(seq(
				'(',
					field('outer', $._identifier),
				')'
			)),
			field('type', $.primary_expression),
		)),

		binary_expression: $ => choice(
			...[
				['&&', 'logical_and'],
				['||', 'logical_or'],
				['>>', 'binary_shift'],
				['<<', 'binary_shift'],
				['&', 'bitwise_and'],
				['^', 'bitwise_xor'],
				['|', 'bitwise_or'],
				['+', 'binary_plus'],
				['-', 'binary_plus'],
				['*', 'binary_times'],
				['/', 'binary_times'],
				['%', 'binary_times'],
				['**', 'binary_exp', 'right'],
				['<', 'binary_relation'],
				['<=', 'binary_relation'],
				['==', 'binary_equality'],
				['!=', 'binary_equality'],
				['~=', 'binary_equality'],
				['>=', 'binary_relation'],
				['>', 'binary_relation'],
				[caseInsensitive('dot'), 'vector_operation'],
				[caseInsensitive('cross'), 'vector_operation'],
			].map(([operator, precedence, associativity]) =>
				(associativity === 'right' ? prec.right : prec.left)(precedence, seq(
					field('left', $.expression),
					field('operator', operator),
					field('right', $.expression),
				)),
			),
		),

		unary_expression: $ => choice(...[
			['+', 10],
			['-', 10],
			['!', 10],
			['~', 10],
		].map(([operator, precedence]) =>
			prec.left(precedence, seq(
				field('operator', operator),
				field('operand', $.expression)
			))
		)),

		update_expression: $ => prec.left(choice(
			seq(
				field('argument', $.expression),
				field('operator', choice('++', '--')),
			),
			seq(
				field('operator', choice('++', '--')),
				field('argument', $.expression),
			),
		)),

		string_expression: $ => choice(
			...[
				['@', 'concat'],
				['$', 'concat'],
			].map(([operator, precedence]) =>
				prec.left(precedence, seq(
					field('left', $.expression),
					field('operator', operator),
					field('right', $.expression),
				)),
			),
		),

		type: $ => choice(
			$.primitive_type,
			$.native_type,
			$.dynamic_array,
			$.class,
			$.identifier,
		),

		dynamic_array: $ => prec.right(seq(
			caseInsensitive('array'),
			'<', $.type, optional(seq(',', $.uint)), '>',
		)),
		primitive_type: _ => choice(
			caseInsensitive('bool'),
			caseInsensitive('byte'),
			caseInsensitive('int'),
			caseInsensitive('float'),
			caseInsensitive('string'),
		),

		native_type: _$ => choice(
			caseInsensitive('vector'),
			caseInsensitive('rotator'),
		),

		_identifier: $ => prec.right(choice(
			$.identifier,
			$.nested_identifier,
			$.reference,
			$.default,
			$.self,
			$.super,
		)),

		identifier: _ => /[A-Za-z_]([A-Za-z0-9_]+)?/,

		array_identifier: $ => seq(
			$.identifier,
			$.array_dimensions,
		),

		array_dimensions: $ => repeat1(
			seq('[', field('size', $._expression), ']')
		),

		default: _ => caseInsensitive('default'),
		string: $ => seq(
			'"',
			repeat(choice(
				alias($.unescaped_double_string_fragment, $.string_fragment),
				$.escape_sequence,
			)),
			'"',
		),
		escape_sequence: _ => token.immediate('\\'),
		name: $ => prec.right(seq(
			'\'',
			optional($._identifier),
			'\'',
		)),
		reference: $ => seq(
			$.identifier,
			$.name,
		),

		uint: _ => token(/\d+/),

		number: _ => {
			const hex_literal = seq(
				choice('0x', '0X'),
				/[\da-fA-F](_?[\da-fA-F])*/,
			);
			const decimal_digits = /\d+/;
			const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
			const exponent_part = seq(choice('e', 'E'));
			const decimal_integer_literal = choice(
				'0',
				seq(decimal_digits, optional(seq(optional('_'), decimal_digits))),
			);
			const decimal_literal = choice(
				seq(optional(choice('-', '+')), decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
				seq('.', decimal_digits, optional(exponent_part)),
				seq(decimal_integer_literal, exponent_part),
				decimal_digits,
			);
			return token(prec.left(choice(
				hex_literal,
				decimal_literal,
				signed_integer
			)));
		},

		member_expression: $ => prec('member', seq(
			field('object', choice($.expression, $.primary_expression)),
			'.',
			field('property', alias($.identifier, $.property_identifier)),
		)),
		nested_identifier: $ => prec('member', seq(
			field('object', choice($._identifier)),
			'.',
			field('property', alias($.identifier, $.property_identifier)),
		)),
		subscript_expression: $ => prec.right('member', seq(
			field('object', choice($.expression, $.primary_expression)),
			'[', field('index', $._expression), ']',
		)),
		parenthesized_expression: $ => seq(
			'(',
			$._expression,
			')',
		),
		call_expression: $ => choice(
			prec('call', seq(
				field('function', $.expression),
				field('arguments', $.arguments),
			)),
		),
